All_Component_DX/force-app/main/default/objects/SM_Change_Order_Criteria__c/SM_Change_Order_Criteria__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Change Order Criteria Object houses information for a Field Change Order (FCO) search specific to a Change Order Record. Criteria for the Search captured in the FCO Console will appear as Search Definition, Sequence, and Type.</description>
    <label>Change Order Criteria</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Order Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>