All_Component_DX/force-app/main/default/objects/SM_Change_Order_Criteria__c/fields/SM_Criteria_Definition__c.field-meta.xml
<CustomField>
    <fullName>SM_Criteria_Definition__c</fullName>
    <description>This field is used to store defined criteria of search in JSON format.</description>
    <inlineHelpText>This field is used to store defined criteria of search in JSON format.</inlineHelpText>
    <label>Search Definition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>