All_Component_DX/force-app/main/default/objects/SM_Change_Order_Criteria__c/fields/SM_Object_Criteria__c.field-meta.xml
<CustomField>
    <fullName>SM_Object_Criteria__c</fullName>
    <description>This field is used to store the WHERE clause for the Installed Product search.</description>
    <inlineHelpText>This field is used to store the WHERE clause for the Installed Product search.</inlineHelpText>
    <label>Object Criteria</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>