All_Component_DX/force-app/main/default/objects/SM_Change_Order_Criteria__c/fields/SM_Sequence__c.field-meta.xml
<CustomField>
    <fullName>SM_Sequence__c</fullName>
    <description>This field is used to store the sequence of different Search types.</description>
    <inlineHelpText>This field is used to store the sequence of different Search types.</inlineHelpText>
    <label>Sequence</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>