All_Component_DX/force-app/main/default/objects/SM_Change_Order_Criteria__c/fields/SM_Type__c.field-meta.xml
<CustomField>
    <fullName>SM_Type__c</fullName>
    <description>This field is used to indicate the type of defined search.</description>
    <inlineHelpText>This field is used to indicate the type of defined search.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Installed Product</fullName>
            </value>
            <value>
                <fullName>Technical Attribute</fullName>
            </value>
            <value>
                <fullName>Batch Lot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>